# howlambda

./: Makefile  README.md  ingestao.py  ingestors.py  lambda_function.py  orientacao_a_objeto.py  principios.py  pyproject.toml  trades.json  writers.py
